--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
+  },
   "private": true,
   "dependencies": {
-    "expo": "^33.0.0",
+    "core-js": "^3.3.6",
+    "expo": "^35.0.0",
     "prop-types": "^15.6.0",
-    "react": "^16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz"
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz"
   }
 }
